--- a/app/css/directives/filterTray.less
+++ b/app/css/directives/filterTray.less
@@ -14,7 +14,7 @@
         white-space: nowrap;
         vertical-align: middle;
         background-image: none;
-        border: @border;
+        border: @main-border;
         display: inline-block;
 
         &:hover {
