--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -26,7 +26,7 @@
         color: @mid-text-color;
         font-size: 13px;
         background-color: @light-background;
-        border: @border;
+        border: @main-border;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         padding: 10px;
