--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -16,7 +16,7 @@
 @main-background: #0B0D0D;
 @main-background-lighten: lighten(@main-background, 4%);
 @main-background-darken: darken(@main-background, 6%);
-@light-background: #1B313D;
+@light-background: #C9CFD1;
 @mid-background: #314551;
 @visualization-box-background: #1B313D;
 
@@ -41,11 +41,13 @@
 @error-dark-color: #AA1E13;
 
 
-@border-color: #CCCCCC;
-@shadow: rgba(0, 0, 0, 0.2);
+@border-color: #FFFFFF;
+@shadow: ;
 @text-shadow-color: #FFFFFF;
-@border: 0px solid @border-color;
-@shadow-border: 0px solid @shadow;
+@main-border: 1px solid @border-color;
+@visualization-border: 0px solid @border-color;
+@visualization-border-radius: 0px;
+@shadow-border: 2px solid #FFFFFF;
 
 @button-border-color: #787878;
 @button-color: #E0D5E0;
