--- a/app/partials/directives/addVisualization.html
+++ b/app/partials/directives/addVisualization.html
@@ -16,7 +16,7 @@
             </div>
             <div class="modal-body">
                 <ul>
-                    <li ng-repeat="item in visualizations" 
+                    <li class="short" ng-repeat="item in visualizations" 
                         ng-init="item.selected = false" 
                         ng-class="(item.selected) ? 'selected' : ''">
                         <div class="neon-popup-thumbnail center-block text-center">
