--- a/app/partials/directives/linksPopup.html
+++ b/app/partials/directives/linksPopup.html
@@ -9,13 +9,10 @@
                 <div>
                     <ul>
                         <li ng-repeat="link in links">
-                        <form action="{{link.url}}" method="get" target="{{link.tab}}" ng-submit="logLinkEvent(link.name)">
-                            <input ng-repeat="arg in link.args" type="hidden" name="{{arg.name}}" value="{{arg.value}}">
-                            <button type="submit" value="submit" tabindex="0" title="{{link.name}}">
+                            <a href="{{link.url}}" target="{{link.tab}}" title="Open {{link.name}} in a new tab" ng-click="logLinkEvent(link.name)">
                                 <img alt="{{link.name}}" class="img-thumbnail center-block" ng-src="{{link.image}}">
                                 <span class="text-uppercase small" ng-bind="link.name"></span>
-                            </button>
-                        </form>
+                            </a>
                         </li>
                     </ul>
                 </div>
