--- a/app/css/style.less
+++ b/app/css/style.less
@@ -403,8 +403,12 @@ button {
 }
 
 .disabled {
-    pointer-events: none;
+    cursor: default;
     opacity: .65;
+
+    &:hover, &:focus {
+        cursor: default;
+    }
 
     .glyphicon {
         color: #999;
