NEON-1690 dark-purple theme changes

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -29,6 +29,7 @@ html {
     background-color: @visualization-box-background;
     color: @main-text-color;
     border: @shadow-border;
+    border-radius: @border-radius;
 
     li {
         a {
@@ -74,6 +75,7 @@ html {
         background-color: @visualization-box-background;
         color: @main-text-color;
         border: @shadow-border;
+        border-radius: @border-radius;
 
         .popover-title {
             background-color: @visualization-box-background;
