--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -42,12 +42,13 @@
 
 
 @border-color: #FFFFFF;
+@border-radius: 2px;
 @shadow: ;
 @text-shadow-color: #FFFFFF;
 @main-border: 1px solid @border-color;
 @visualization-border: 0px solid @border-color;
-@visualization-border-radius: 0px;
-@shadow-border: 2px solid #FFFFFF;
+@visualization-border-radius: @border-radius;
+@shadow-border: 1px solid #FFFFFF;
 
 @button-border-color: #787878;
 @button-color: #E0D5E0;
