NEON-1690 reworking ops clock layout based on theming mockups

--- a/app/css/directives/circularHeatForm.less
+++ b/app/css/directives/circularHeatForm.less
@@ -24,6 +24,18 @@
         height: 80%;
         width: 100%;
     }
+
+    .most-active {
+        padding-top: 10px;
+        color: @main-text-color;
+
+        .ops-clock-active {
+            padding-left: 5px;
+            display: inline-block;
+            color: @callout;
+            font-weight: bold;
+        }
+    }
 }
 
 .visualization-widget-mobile {
