NEON-1727 Added external application service links to filters in the text cloud.  Created the links popup button directive for use in the text cloud and other visualizations.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -444,6 +444,7 @@ button {
     }
 
     .glyphicon {
+        color: @mid-text-color;
         cursor: pointer;
         float: left;
         padding: 7px 8px;
@@ -451,12 +452,16 @@ button {
         /* Remove the margin set by .header-item .glyphicon (above).*/
         margin: 0px;
 
+        &:hover {
+            background-color: @accent-dark;
+            color: @light-text-color;
+        }
+
         &.glyphicon-remove {
             color: @error-color;
 
             &:hover {
                 background-color: @error-color;
-                border-color: @error-dark-color;
                 color: @light-text-color;
             }
         }
