NEON-1772 Add limit to number of translations in newsfeed

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -58,4 +58,10 @@
             word-wrap: break-word;
         }
     }
+
+    .translate {
+        .input-group-btn {
+            width: auto;
+        }
+    }
 }
