Fixed a minor styling issue with the links popup button in the popups in the map directive.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -230,22 +230,21 @@
             padding: 2px;
         }
 
-        .link-div {
+        .links-popup-button {
             /* Align under the olPopupCloseBox. */
             position: absolute;
             right: 13px;
             top: 70px;
             z-index: 1;
 
-            .link-btn {
-                /* Ensure the width matches the width of the olPopupCloseBox. */
-                padding: 1px;
-                line-height: 12px;
+            /* Ensure the width matches the width of the olPopupCloseBox. */
+            padding: 1px;
+            line-height: 13px;
 
+            .neon-popup-button {
                 .glyphicon {
                     color: #333;
-                    font-size: 11px;
-                    font-weight: bold;
+                    font-size: 13px;
                 }
             }
         }
