NEON-1721 Move filter tray into dropdown

--- a/app/css/directives/filterTray.less
+++ b/app/css/directives/filterTray.less
@@ -1,24 +1,29 @@
 .filter-tray-filters {
-    padding-top: 5px;
-    padding-bottom: 5px;
+    height: 50px;
 
     .filter-tray-filter {
         margin-right: 5px;
-        border-radius: 0;
         font-size: 12px;
-        font-weight: bold;
         line-height: 20px;
         padding: 6px 16px;
         text-transform: uppercase;
-        text-align: center;
         white-space: nowrap;
         vertical-align: middle;
-        background-image: none;
-        border: @border;
         display: inline-block;
+        width: 100%;
 
         &:hover {
             cursor: default;
+            color: #262626;
+            text-decoration: none;
+            background-color: #f5f5f5;
+        }
+
+        .filter-remove-btn {
+            cursor: pointer;
+            color: @error-color;
+            font-size: 14px;
+            padding-right: 10px;
         }
     }
 }
