NEON-1728 Added external application links to the map bounds filter.  Minor cleanup.

--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -45,6 +45,7 @@
             display: inline-block;
             font-weight: bold;
             letter-spacing: 0.05em;
+            overflow-y: hidden;
             text-align: center;
             height: 55px;
             width: 110px;
