NEON-1769 Added external application links to the newsfeed.  Added a json override attribute to the links popup button to let visualizations open links popups containing links from multiple sources/keys.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -40,14 +40,23 @@
             background-color: #ffff66;
         }
 
+        img {
+            margin-right: 5px;
+        }
+
+        .vertical-align {
+            position: relative;
+            top: 2px;
+        }
+
         .head {
             font-size: 15px;
             font-weight: bold;
-            padding-top: 2px;
         }
 
         .name {
             color: @main-text-color;
+            font-size: 15px;
         }
 
         .date {
@@ -56,6 +65,11 @@
 
         .text {
             word-wrap: break-word;
+        }
+
+        .glyphicon {
+            color: #333;
+            font-size: 12px;
         }
     }
 
