--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -18,6 +18,15 @@
 }
 
 .neon-popup {
+    label {
+        font-size: 16px;
+        margin-left: 20px;
+
+        &.label-small {
+            font-size: 13px;
+        }
+    }
+
     ul {
         list-style: none;
         margin-left: 15px;
