--- a/app/partials/directives/linksPopup.html
+++ b/app/partials/directives/linksPopup.html
@@ -6,15 +6,18 @@
                 <h4 class="modal-title" id="customConnectionModalLabel">Open External Applications</h4>
             </div>
             <div class="modal-body">
-                <div>
+                <div ng-repeat="(key, array) in links">
+                    <label ng-if="linksCount > 1" ng-bind="key"></label>
+                    <label ng-if="array.length == 0" class="label-small">None Available</label>
                     <ul>
-                        <li ng-repeat="link in links">
+                        <li ng-repeat="link in array">
                             <a href="{{link.url}}" target="{{link.tab}}" title="Open {{link.name}} in a new tab" ng-click="logLinkEvent(link.name)">
                                 <img alt="{{link.name}}" class="img-thumbnail center-block" ng-src="{{link.image}}">
                                 <span class="text-uppercase small" ng-bind="link.name"></span>
                             </a>
                         </li>
                     </ul>
+                    <div class="clearfix"></div>
                 </div>
             </div>
             <div class="modal-footer">
