Fixed a minor bug in the map with the position of the links popup button in the map points popups.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -231,10 +231,9 @@
         }
 
         .links-popup-button {
-            /* Align under the olPopupCloseBox. */
+            /* Align under the olPopupCloseBox; the 'top' position will be set by the map because the 'close box' can have different 'top' positions itself. */
             position: absolute;
             right: 13px;
-            top: 70px;
             z-index: 1;
 
             /* Ensure the width matches the width of the olPopupCloseBox. */
