--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -135,6 +135,11 @@
                             height: 60px;
                             margin-top: 10px;
 
+                            &.row-large {
+                                height: auto;
+                                display: flex;
+                            }
+
                             &:first-child {
                                 margin-top: 0px;
                             }
@@ -256,7 +261,7 @@
     }
 
     .olControlAttribution {
-        
+
         a {
             pointer-events: none;
         }
